* XXX XXX XX XXXX XX:XX:XX +0000 Manvendra Bhangui <@email@> @version@-@release@%{?dist}
Release @version@-@release@ Start 14/09/2023 End --/--/----
======= Release Highlights ================================================
===========================================================================
- 14/09/2023
01. tcpserver.c: display ip, pid in printstatus

* Fri Sep 08 2023 17:37:24 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.3-1.1%{?dist}
Release 1.1.3-1.1 Start 27/04/2023 End XX/XX/XXXX
======= Release Highlights ================================================
o use of TLS_CIPHER_SUITE for tlsv1_2
===========================================================================
- 08/07/2023
01. tcpclient.c, dotls.c: use strerr_tls for tls errors
- 19/08/2023
02. tcpclient.c, dotls.c, tcpserver.c: use TLS_CIPHER_LIST, TLS_CIPHER_SUITE
    to set ciphers
- 08/09/2023 - indimail-mta-3.0.4

* Sun Apr 23 2023 17:50:00 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.2-1.1%{?dist}
Release 1.1.2-1.1 Start 13/02/2023 End 23/04/2023
======= Release Highlights ================================================
o ability to pass username or uid in -u option
o ability to pass multiple groups to -g
===========================================================================
- 13/02/2023
01. dotls.c, tcpserver.c: added error message for tls_init failure
02. tcpclient.c: added error message for tls_init, tls_session failures
03. tcpserver.c: allow both user and uid to be passed to -u option. 
    passing user enables setting of supplementary groups
- 20/02/2023
04. tcpserver.c: add additional groups as a comma separated
    groups to -g
- 08/03/2023
05. tcpclient.c: refactored wait handling
- 01/04/2023
06. load_mysql.c: refactored getlibObject() function
- 08/04/2023
07. tcpserver.c: fixed status not getting printed
- 23/04/2023 - indimail-mta-3.0.3

* Mon Jan 30 2023 13:14:56 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.1-1.1%{?dist}