@@ -4,6 +4,8 @@ Release @version@-@release@ Start 14/09/2023 End --/--/----
 ===========================================================================
 - 14/09/2023
 01. tcpserver.c: display ip, pid in printstatus
+- 27/09/2023
+02. tcpserver.c: skip displaying IP in printstatus for sigchild
 
 * Fri Sep 08 2023 17:37:24 +0000 Manvendra Bhangui <ucspi-tcp@indimail.org> 1.1.3-1.1%{?dist}
 Release 1.1.3-1.1 Start 27/04/2023 End XX/XX/XXXX
